Archive2/78/f90fe4e7b15da0/output
main.cpp:7:32: error: target exception specification is not superset of source
        void (*q)() noexcept = bar;
                               ^
1 error generated.
